fixed CMakeLists and filepathing; ready for test deploy

--- a/pipeline-development/driver/ASYNC-File-Open-Test/CMakeLists.txt
+++ b/pipeline-development/driver/ASYNC-File-Open-Test/CMakeLists.txt
@@ -5,7 +5,7 @@ set (CMAKE_CXX_STANDARD 17)
 
 set (MAIN recfile_open_test)
 add_executable (${MAIN} ${MAIN}.cpp)
-install (TARGETS ${MAIN} RUNTIME DESTINATION "${CMAKE_CURRENT_SOURCE_DIR}/build")
+install (TARGETS ${MAIN} RUNTIME DESTINATION bin)
 
 
 find_package (MetavisionSDK COMPONENTS core driver ui REQUIRED)
