--- a/pipeline-development/driver/ASYNC-File-Open-Test/CMakeLists.txt
+++ b/pipeline-development/driver/ASYNC-File-Open-Test/CMakeLists.txt
@@ -8,7 +8,10 @@ add_executable (${MAIN} ${MAIN}.cpp)
 install (TARGETS ${MAIN} RUNTIME DESTINATION bin)
 
 
-find_package (MetavisionSDK 4.5.2 COMPONENTS core driver ui REQUIRED)
+set(MetavisionSDK_DIR "/home/jmwul/Desktop/PetaLinux-Projects/crosscompile-bin-test/os/build/tmp/work/cortexa9t2hf-neon-xilinx-linux-gnueabi/scriptembed/0.1+gitAUTOINC+5e383a3f0a-r0/recipe-sysroot/usr/share/cmake/MetavisionSDK")
+list(APPEND CMAKE_PREFIX_PATH ${MetavisionSDK_DIR})
+
+find_package (MetavisionSDK COMPONENTS core driver ui REQUIRED)
 target_link_libraries (
     ${MAIN}
     MetavisionSDK::core
