--- a/pipeline-development/driver/ASYNC-File-Open-Test/CMakeLists.txt
+++ b/pipeline-development/driver/ASYNC-File-Open-Test/CMakeLists.txt
@@ -8,7 +8,9 @@ add_executable (${MAIN} ${MAIN}.cpp)
 install (TARGETS ${MAIN} RUNTIME DESTINATION bin)
 
 
-set(MetavisionSDK_DIR "/home/jmwul/Desktop/PetaLinux-Projects/crosscompile-bin-test/os/build/tmp/work/cortexa9t2hf-neon-xilinx-linux-gnueabi/scriptembed/2.2-r0/recipe-sysroot/usr/share/cmake/MetavisionSDK")
+set(bbWORKDIR "/home/jmwul/Desktop/PetaLinux-Projects/crosscompile-bin-test/os/build/tmp/work/cortexa9t2hf-neon-xilinx-linux-gnueabi/scriptembed/2.2-r0")
+
+set(MetavisionSDK_DIR "${bbWORKDIR}/scriptembed/2.2-r0/recipe-sysroot/usr/share/cmake/MetavisionSDK")
 list(APPEND CMAKE_PREFIX_PATH ${MetavisionSDK_DIR})
 
 find_package (MetavisionSDK COMPONENTS core driver ui REQUIRED)
@@ -18,3 +20,6 @@ target_link_libraries (
     MetavisionSDK::driver
     MetavisionSDK::ui
     )
+
+list(APPEND CMAKE_MODULE_PATH "${bbWORKDIR}/recipe-sysroot/usr/share/cmake-3.21/Modules/FindOpenGL.cmake")
+find_package(OpenGL REQUIRED)
