--- a/pipeline-development/driver/ASYNC-File-Open-Test/CMakeLists.txt
+++ b/pipeline-development/driver/ASYNC-File-Open-Test/CMakeLists.txt
@@ -5,13 +5,11 @@ set (CMAKE_CXX_STANDARD 17)
 
 set (MAIN recfile_open_test)
 add_executable (${MAIN} ${MAIN}.cpp)
-install (TARGETS ${MAIN} RUNTIME DESTINATION bin)
 
 
-find_package (MetavisionSDK COMPONENTS core driver ui REQUIRED)
+find_package (MetavisionSDK COMPONENTS core driver REQUIRED)
 target_link_libraries (
     ${MAIN}
     MetavisionSDK::core
     MetavisionSDK::driver
-    MetavisionSDK::ui
     )
